# playground-wasm-acp

./: .gitignore  Cargo.toml  README.md  config.example.toml  justfile  secrets.example.toml  wasm.lock.toml  wasm.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/acp-wasm-sys/: Cargo.toml
crates/acp-wasm-sys/src/: bindings.rs  layer.rs  lib.rs  provider.rs
crates/copilot-provider/: Cargo.toml  README.md
crates/copilot-provider/src/: copilot.rs  lib.rs  storage.rs
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/: config_option_persistence.rs  config_options_modes.rs  filesystem_mount.rs  initialize.rs  layer_shout.rs  layer_uppercase.rs  multi_provider_model_selection.rs  prompt_cancel.rs  prompt_text.rs  prompt_tool_call.rs  prompt_usage.rs  prompt_usage_copilot.rs  secrets.rs  secrets_config.rs  terminal_config_option.rs  terminal_tool_call.rs
crates/e2e-tests/tests/common/: mod.rs
crates/guest/: Cargo.toml
crates/guest/src/: bindings.rs  lib.rs  main.rs  ollama.rs  storage.rs
crates/host/: Cargo.toml
crates/host/src/: acp.rs  bindings.rs  bridge.rs  client_impl.rs  config.rs  group.rs  install.rs  main.rs  secrets.rs  secrets_impl.rs  state.rs  translate.rs  utils.rs  wasi_log.rs  wasm.rs  wasm_actor.rs
crates/host/src/bridge/: gate.rs  handlers.rs  mod.rs  outbound.rs
crates/ollama-provider/: Cargo.toml
crates/ollama-provider/src/: lib.rs  ollama.rs  storage.rs  tools.rs
crates/ox/: Cargo.toml
crates/ox/src/: lib.rs
crates/ox/src/net/: tcp_listener.rs
crates/ox/src/runtime/: reactor.rs
crates/plan-layer/: Cargo.toml
crates/plan-layer/src/: lib.rs
crates/uppercase-layer/: Cargo.toml
crates/uppercase-layer/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
wit/acp/: agent.wit  client.wit  content.wit  deps  errors.wit  filesystem.wit  init.wit  prompts.wit  sessions.wit  terminals.wit  tools.wit  world.wit
