[workspace]
members = ["crates/acp-wasm-sys", "crates/host", "crates/ollama-provider"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0 WITH LLVM-exception"
publish = false

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[workspace.dependencies]
# Shared
clap = "4.5.50"
acp-wasm-sys = { path = "./crates/acp-wasm-sys" }

# Guest
wit-bindgen-rt = "0.44.0"
wstd = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Host
wasmtime = "44.0.0"
wasmtime-wasi = "44.0.0"
wasmtime-wasi-http = "44.0.0"
tokio = "1.48.0"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"
futures = "0.3"
futures-concurrency = "7.6"
agent-client-protocol = "0.11.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Xtask
xshell = "0.2.7"
