[workspace]
members = [
    "crates/acp-wasm-sys",
    "crates/copilot-provider",
    "crates/e2e-tests",
    "crates/host",
    "crates/ollama-provider",
    "crates/plan-layer",
    "crates/uppercase-layer",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0 WITH LLVM-exception"
publish = false

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[workspace.dependencies]
# Shared
clap = "4.5.50"
acp-wasm-sys = { path = "./crates/acp-wasm-sys" }

# Guest
wit-bindgen = "0.54.0"
wstd = { version = "0.6.6", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Host
wasmtime = "44.0.1"
wasmtime-wasi = "44.0.1"
wasmtime-wasi-http = "44.0.1"
tokio = "1.48.0"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"
futures = "0.3"
futures-concurrency = "7.6"
agent-client-protocol = { version = "1.2.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasm-package-manager = { version = "0.3.0", features = ["http-sync"] }
keyring-core = "1"

# Xtask
xshell = "0.2.7"

[patch.crates-io]
wstd = { path = "/Users/yosh/Code/wstd" }
