[package]
name = "guest"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
ox = { workspace = true }

[package.metadata.component]
package = "component:guest"

[package.metadata.component.dependencies]
