[package]
name = "guest"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
wstd = { workspace = true }
api_ollama = { workspace = true }
acp-wasm-sys = { workspace = true }

[package.metadata.component]
package = "component:guest"

[package.metadata.component.dependencies]
