[package]
name = "host"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures = { workspace = true }
wasmtime = { workspace = true, features = ["component-model"] }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
agent-client-protocol = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
