[package]
name = "host"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-concurrency = { workspace = true }
wasmtime = { workspace = true, features = ["component-model", "async", "component-model-async"] }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true, features = ["p3"] }
agent-client-protocol = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
wasm-package-manager = { workspace = true }
dirs = "5"
semver = "1"
keyring-core = { workspace = true }
rustls = { version = "0.23", features = ["aws_lc_rs"] }

# Platform-native keyring-core credential stores. The `native` backend for
# `--keyring-store` resolves to whichever of these matches the target OS; the
# built-in `mock` store needs no extra dependency.
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[dev-dependencies]
tempfile = "3"
