[package]
name = "ollama-provider"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
wstd = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
acp-wasm-sys = { workspace = true }

[package.metadata.component]
package = "component:ollama-provider"

[package.metadata.component.dependencies]
