[package]
name = "uppercase-layer"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
acp-wasm-sys = { workspace = true }

[package.metadata.component]
package = "component:uppercase-layer"
